--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {
+body {background-color: coral;}
   background: #fff;
   font-family: "Josefin Sans", arial, sans-serif;
   font-weight: 300;
