--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {background-color: coral;}
+body {background-color: light blue;}
   font-family: "Josefin Sans", arial, sans-serif;
   font-weight: 300;
   font-size: 18px;
